<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/mes"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/meses"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/txtAnio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/anio"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtAnio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/anio"
        android:inputType="number"
        android:maxLength="4"
        android:minHeight="48dp"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/pais"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />
</LinearLayout>